--- a/templates/gestion-productos.html
+++ b/templates/gestion-productos.html
@@ -1,13 +1,13 @@
 {% extends "layout.html" %}
 
 {% block content %}
-
+{% from "macrogestionproducto.html" import render_field %}
     <div class="item-grid content-grid text-center">
         <h1>GESTION DE PRODUCTOS</h1>
         <!-- Formulario de registrar productos -->
         <!-- Consultar producto-->
-        <form class="form-inline-block m-5 pr-5 pl-5">
-            <input class="form-control" type="search" placeholder="Consultar por nombre o codigo">
+        <form class="form-inline-block m-5 pr-5 pl-5" method="POST">
+          {{ render_field(form.nombre, class='form-control') }}
             <button class="btn btn-primary mt-3" type="submit">Consultar</button>
         </form>
 
@@ -20,38 +20,33 @@
             <tr class="table-muted">
               <td>Nombre del producto</td>
               <td>Codigo </td>
-              <td>Precio </td>
+              <td>Precio (Kg) </td>
               <td>Cantidad </td>
-              <td>Fecha de Ingreso </td>
-              <td>Fecha de Caducidad </td>
+              <td>Dia Vencimiento </td>
+              <td>Mes Vencimiento </td>
+              <td>Año Vencimiento </td>
               <td>Accion</td>
             </tr>
+            
+            {% for item in data.each()%}
             <tr>
-              <td>Nombre</td>
-              <td>012</td>
-              <td>2$</td>
-              <td>2kg</td>
-              <td>3/10/2020</td>
-              <td>10/12/2020</td>
-              <td>
-                <button class="btn btn-sm btn-danger">Eliminar</button>
-                <button class="btn btn-sm btn-warning">Modificar</button>
-              </td>
-            </tr>
-            <tr>
-              <td>Nombre</td>
-              <td>012</td>
-              <td>5$</td>
-              <td>12kg</td>
-              <td>3/10/2020</td>
-              <td>10/12/2020</td>
-              <td>
-                <button class="btn btn-sm btn-danger">Eliminar</button>
-                <a href="{{ url_for('modificarProducto') }}" class="btn btn-sm btn-warning">Modificar</a>
-              </td>
-            </tr> 
+                 
+                {%set sub=db.child(item.key()).get()%}
+                {%for obj in sub.each()%}
+                  <td name="{{obj.val()}}">{{obj.val()}}</td>
+                {% endfor %}
+                <td>
+                  
+                  <button name="{{item.key()}}" method="POST" class="btn btn-sm btn-danger">Eliminar</button>
+                  <button name="{{item.key()}}" class="btn btn-sm btn-warning">Modificar</button>
+                
+                </td>
+              </tr> 
+              
+            {% endfor %} 
+
           </table>
-          <button class="btn btn-sm btn-danger">Ocultar Lista</button>
+         <!-- <button class="btn btn-sm btn-danger">Ocultar Lista</button>-->
         </div>
         
         
@@ -60,7 +55,7 @@
         <a href="{{ url_for('agregarProducto') }}"><button class="btn btn-success mt-5">Agregar Producto</button></a>
 
         <!--Informacion del producto-->
-        <div class="card pr-5 pl-5 m-5">
+        <!--<div class="card pr-5 pl-5 m-5">
           <div class="card-body">
             <h4 class="card-title">Nombre del producto</h4>
             <div class="col">
@@ -84,7 +79,7 @@
             <a href="#" class="btn btn-danger">Eliminar</a>
             <a href="{{ url_for('modificarProducto') }}" class="btn btn-warning">Modificar</a>
           </div>
-        </div>
+        </div>-->
 
     </div>
 
