Gestion de Producto y Usuario

--- a/templates/busqueda.html
+++ b/templates/busqueda.html
@@ -35,7 +35,7 @@
                 <td>
                   <a href="/eliminar/{{item.key()}}" class="btn btn-sm btn-danger">Eliminar</a>
                   
-                  <a href="/modificar/{{item.key()}}" class="btn btn-sm btn-warning">Modificar</a>
+                  <a href="/editar/{{item.key()}}" class="btn btn-sm btn-warning">Modificar</a>
                   {%endif%} 
                 </td>
               </tr> 
