--- a/templates/agregar-producto.html
+++ b/templates/agregar-producto.html
@@ -8,13 +8,13 @@
        
 
         <form class="mostrar form-group pr-5 pl-5 mr-5 ml-5 mt-2" method="POST">
-            {{ render_field(form.nombre, class='form-control') }}
-            {{ render_field(form.codigo, class='form-control') }}
-            {{ render_field(form.precio, class='form-control') }}
-            {{ render_field(form.cantidad, class='form-control') }}
-            {{ render_field(form.dia_vencimiento, class='form-control') }}
-            {{ render_field(form.mes_vencimiento, class='form-control') }}
-            {{ render_field(form.ano_vencimiento, class='form-control') }}
+            {{ render_field(form.nombre, class='form-control',pattern="[a-zA-Z\s]{3,}") }}
+            {{ render_field(form.codigo, class='form-control',min="0",max="10000000") }}
+            {{ render_field(form.precio, class='form-control',pattern="[+]?[0-9]*[.]?[0-9]+") }}
+            {{ render_field(form.cantidad, class='form-control',pattern="[+]?[0-9]*[.]?[0-9]+") }}
+            {{ render_field(form.dia_vencimiento, class='form-control',min='1', max='31') }}
+            {{ render_field(form.mes_vencimiento, class='form-control',min='1', max='12') }}
+            {{ render_field(form.ano_vencimiento, class='form-control',min='2021', max='5000') }}
 
             <button type="submit" class="btn btn-primary p-1 m-5">Agregar</button>
         </form>
