--- a/templates/editar-producto.html
+++ b/templates/editar-producto.html
@@ -12,13 +12,13 @@
                 <table class="table">
                  <form class="mostrar form-group pr-5 pl-5 mr-5 ml-5 mt-2" method="POST">
                   <tr>
-                  {{ render_field(form.nombre, class='form-control',value=(db.child(id).child("ANombre").get()).val())}}
-                  {{ render_field(form.codigo, class='form-control' ,value=(db.child(id).child("BCodigo").get()).val()) }}
-                  {{ render_field(form.precio, class='form-control' ,value=(db.child(id).child("CPrecio").get()).val()) }}
-                  {{ render_field(form.cantidad, class='form-control', value=(db.child(id).child("DCantidad").get()).val()) }}
-                  {{ render_field(form.dia_vencimiento, class='form-control' ,value=(db.child(id).child("EDia").get()).val()) }}
-                  {{ render_field(form.mes_vencimiento, class='form-control' ,value=(db.child(id).child("FMes").get()).val()) }}
-                  {{ render_field(form.ano_vencimiento, class='form-control' ,value=(db.child(id).child("GAño").get()).val()) }}
+                  {{ render_field(form.nombre, class='form-control',value=(db.child(id).child("ANombre").get()).val(),pattern="[a-zA-Z\s]{3,}")}}
+                  {{ render_field(form.codigo, class='form-control' ,value=(db.child(id).child("BCodigo").get()).val(),min="0",max="10000000") }}
+                  {{ render_field(form.precio, class='form-control' ,value=(db.child(id).child("CPrecio").get()).val(),pattern="[+]?[0-9]*[.]?[0-9]+") }}
+                  {{ render_field(form.cantidad, class='form-control', value=(db.child(id).child("DCantidad").get()).val(),pattern="[+]?[0-9]*[.]?[0-9]+") }}
+                  {{ render_field(form.dia_vencimiento, class='form-control' ,value=(db.child(id).child("EDia").get()).val(),min='1', max='31') }}
+                  {{ render_field(form.mes_vencimiento, class='form-control' ,value=(db.child(id).child("FMes").get()).val(),min='1', max='12') }}
+                  {{ render_field(form.ano_vencimiento, class='form-control' ,value=(db.child(id).child("GAño").get()).val(),min='2021', max='5000') }}
                   
                 </tr> 
               </table>
