--- a/templates/mainmenu.html
+++ b/templates/mainmenu.html
@@ -5,12 +5,21 @@
     <div class="item-grid content-grid text-center">
         <h1>MENU PRINCIPAL</h1>
         <!-- MENU PRINCIPAL -->
-        <div class="m-5 p-5">
+        <div class="m-1 p-2">
             <a class="btn btn-primary" href="{{ url_for('gestionProductos') }}">GESTION DE PRODUCTOS</a>
         </div>
 
-        <div class="m-5 p-5">
+        <div class="m-1 p-2">
             <a class="btn btn-primary" href="{{ url_for('agregarUsuario') }}">GESTION DE USUARIOS</a>
+        </div>
+        <div class="m-1 p-2">
+            <a class="btn btn-primary" href="{{url_for('menuInventario')}}">GESTION DE INVENTARIO</a>
+        </div>
+        <div class="m-1 p-2">
+            <a class="btn btn-primary" href="">GESTION DE VENTAS</a>
+        </div>
+        <div class="m-1 p-2">
+            <a class="btn btn-primary" href="">GESTION DE OFERTA</a>
         </div>
 
         
