--- a/templates/gestion-productos.html
+++ b/templates/gestion-productos.html
@@ -25,6 +25,7 @@
               <td>Dia Vencimiento </td>
               <td>Mes Vencimiento </td>
               <td>Año Vencimiento </td>
+              <td>Oferta</td>
               <td>Accion</td>
             </tr>
             
