--- a/templates/mainmenu.html
+++ b/templates/mainmenu.html
@@ -12,14 +12,12 @@
         <div class="m-1 p-2">
             <a class="btn btn-primary" href="{{ url_for('agregarUsuario') }}">GESTION DE USUARIOS</a>
         </div>
+        
         <div class="m-1 p-2">
-            <a class="btn btn-primary" href="{{url_for('menuInventario')}}">GESTION DE INVENTARIO</a>
+            <a class="btn btn-primary" href="{{ url_for('agregarElemento')}}">GESTION DE VENTAS</a>
         </div>
         <div class="m-1 p-2">
-            <a class="btn btn-primary" href="">GESTION DE VENTAS</a>
-        </div>
-        <div class="m-1 p-2">
-            <a class="btn btn-primary" href="">GESTION DE OFERTA</a>
+            <a class="btn btn-primary" href="{{ url_for('gestionOferta')}}">GESTION DE OFERTA</a>
         </div>
 
         
